Changes in version 2023.6.11

- Remove maptools dependency.

Changes in version 2023.3.14

- Changes to satisfy CRAN (import is, consistent function args, graphical-units.Rd, rm Fox book URL in stat_ellipse.Rd).
- facet and plot title text size configurable via theme(strip.text, axis.text).

Changes in version 2022.9.14

- Include Yufan Fei as contributor in DESCRIPTION.

Changes in version 2022.9.14

- Allow configurable legend/axis text size via theme.

Changes in version 2022.8.31

- User-configurable selection styles, alpha_off and colour_off.

Changes in version 2022.8.25

- import data.table, for faster compilation.

Changes in version 2022.5.25

- Add ability to rotate geom_text labels, following ggplot2's semantics of rotation direction. 

Changes in version 2022.5.24

- Fixed small test regression and set up Github Actions. Neither of these is user facing.

Changes in version 2022.2.2

- Default x/y axis text size increased to 16px from 11px in animint.js.
- Suggest RColorBrewer to avoid CRAN NOTE "Undeclared package RColorBrewer in Rd xrefs".

Changes in version 2022.1.25

- Remove geom/stat_boxplot/quantile due to errors from CRAN check.

Changes in version 2020.9.18

- update moved mcmaster URL in docs.

Changes in version 2020.8.19

- Move geom-specific code from saveLayer/if-else to Geom$export_animint and pre_process methods in Geom sub-classes.

Changes in version 2020.7.9

- Using RSelenium Version 1.7.4.
- Removed Defunct and Redundant code/examples.
- User can test using docker to avoid incompatibility issues.
- imports knitr as knit_print imported in namespace.
- Use new grid::unitType() to determine unit type of margin in pt/points to line conversion.

Changes in version 2020.3.2

- data.frame(stringsAsFactors=TRUE) in tests.

Changes in version 2019.7.12

- Added three authors which are mentioned in Rd/R files.

Changes in version 2019.7.3

- ggsave(file.path(tempdir(), f)) in examples.

Changes in version 2019.7.2
