@@ -1,6 +1,7 @@
 Changes in version 2023.6.11
 
 - Remove maptools dependency.
+- split.x -> split_recursive to silence new CRAN check.
 
 Changes in version 2023.3.14
 
